# turtlebot2_dashboard

./: .gitignore  README.md
src/: Cargo.toml  build.sh
src/dashboard/: pubspec.yaml
src/dashboard/lib/: bridge_generated.dart  main.dart
src/lib/: Cargo.toml
src/lib/adapter/: Cargo.toml
src/lib/adapter/src/: adapter.rs  api.rs  bridge_generated.rs  lib.rs
src/lib/src/: lib.rs  main.rs
src/lib/turtlebot2/: Cargo.toml
src/lib/turtlebot2/src/: api.rs  bridge_generated.rs  lib.rs  main.rs  packet.rs  parser.rs  turtlebot2.rs
src/lib/turtlebot2/src/rx/: mod.rs
src/lib/turtlebot2/src/tx/: mod.rs
src/ui/: pubspec.yaml
