[package]
authors = ["bus710"]
edition = "2021"
name = "turtlebot2"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.52"
crossbeam-channel = "0.5.2"
derivative = "2.2.0"
flutter_rust_bridge = "1.14.0"
itertools = "0.10.3"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
once_cell = "1.9.0"
serialport = "4.0.1"
thiserror = "1.0.30"
